# musicmole

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/UI/: Roboto_Italic_Font.hpp  menu.hpp  modelTrainPopup.hpp
src/beat_detection/: beat_detection.hpp
src/controllers/: BaseController.hpp  GestureController.hpp  NumericalController.hpp
src/game/: Hole.hpp  Mole.hpp  game.hpp
src/gesture/: gestureModel.hpp  readGestureDataset.hpp
src/gloveInterface/: getCurrentData.hpp  recordPose.hpp
src/serial/: availableSerial.hpp
src/ticker/: MusicalTicker.hpp  PeriodicTicker.hpp  baseticker.hpp  ticker
test/: CMakeLists.txt  ConsoleGameTest.cpp  GameWithMenuTest.cpp  GestureControllerTest.cpp  NumericalControllerGameTest.cpp  NumericalControllerTest.cpp  PeriodicTickerTest.cpp  availableSerialtest.cpp  beatDetectionTest.cpp  gameScreenTest.cpp  gestureModeltest.cpp  libfftwTest.cpp  libtorchtest.cpp  liveGestureClassificationtest.cpp  liveGestureTest.cpp  menuTest.cpp  musicalTickerTest.cpp  serialtest.cpp
test/gestureData/: closed_palm.csv  fist.csv  index_point.csv  spread_palm.csv  thumb_out_palm.csv  victory.csv
